tests/snapshots/wallets/reveal_mnemonic/missing_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - reveal-mnemonic
    - wallet
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <PASSWORD>

Usage: kermit wallets reveal-mnemonic <WALLET_NAME> <PASSWORD>

For more information, try '--help'.
