tests/snapshots/wallets/reveal_mnemonic/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - reveal-mnemonic
    - foo
    - "1234"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: foo not found
